# fractal-tree-python-haskell

./: README.md
TreeHaskell/: CHANGELOG.md  TreeHaskell.cabal
TreeHaskell/app/: Main.hs
TreeHaskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
TreeHaskell/dist-newstyle/packagedb/ghc-9.4.8/: TreeHaskell-0.1.0.0-inplace.conf  package.cache
TreeHaskell/src/: PaintBranch.hs  ProcessString.hs
TreePython/: LSystem.py  Main.py  TreeCanvas.py
