cabal-version:      3.0

name:               TreeHaskell
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

library
    import:           warnings
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable TreeHaskell
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        TreeHaskell,
        gloss,
        OpenGL,
        GLUT
    hs-source-dirs:   app
    default-language: Haskell2010
